samples/_failures_safe/1761725233_7b7395_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43347648.c: In function ‘main’:
./samples/SAFE/__tmp_43347648.c:129:16: error: missing terminating " character
  129 |         printf("
      |                ^
./samples/SAFE/__tmp_43347648.c:129:9: error: expected expression at end of input
  129 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_43347648.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43347648.c:129:9: error: expected declaration or statement at end of input
